Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ auto: true
 title: 大印视觉
 url: https://dayinvision.com
 author_info: <a href="https://dayinvision.com/">大印</a>
+
+theme: jekyll-theme-cayman
